--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="top">
-				<div id="prompt" class="show">
+			<div id="top" class="centerDiv outer">
+				<div id="prompt" class="show centerDiv inner">
 					Please enter your birthday.
 				</div>
-				<div id="clock" class="hide">
+				<div id="clock" class="hide centerDiv inner">
 					<span id="days">
 						<div class="value"></div>
 						<div class="units">days</div>
@@ -30,13 +30,13 @@
 					</span>
 				</div>
 			</div>
-			<div id="bottom">
-				<div id="inputBoxes" class="show">
+			<div id="bottom" class="centerDiv outer">
+				<div id="inputBoxes" class="show centerDiv inner">
 					<input type="text" name="month" maxlength="2" placeholder="mm" />
 					<input type="text" name="day" maxlength="2" placeholder="dd" />
 					<input type="text" name="year" maxlength="4" placeholder="yyyy" />
 				</div>
-				<div id="explanation" class="hide">
+				<div id="explanation" class="hide centerDiv inner">
 					This is your life. If you are anything like the average person, you have roughly <span class="explanationDays"></span> days remaining on this planet. That's it. Then it's all over. Make every single one of those days count, because this clock will never stop ticking.
 				</div>
 			</div>
